--- a/styles.css
+++ b/styles.css
@@ -1,52 +1,103 @@
 body {
-    font-family: Roboto ;
+font-family: Roboto ;
   
 
 }
 .text {
-    color: #757575;
+font-weight: 400;
+font-size: 14px;
+line-height: 1.71;
+letter-spacing: 0.03em;
+color: #757575;
 }
 .text1 {
-    color: #212121;
+color: #212121;
+font-weight: 700;
+font-size: 14px;
+line-height: 1.14;
+letter-spacing: 0.03em;
+text-transform: uppercase;
+color: #212121;
 }
 .header-item {
-    color: #212121;
+color: #212121;
 
 }
 .header-link1 {
     color: #2196F3;
+    text-decoration: none;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
 }
-.header-link {
+.header-link  {
     color: #212121;
+    text-decoration: none;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
 }
-.header-link2 {
+.header-link:hover  {
     color: #2196F3;
 }
+.header-link:focus {
+    color: #2196F3;
+}
+
 .header-tel {
-color: #757575;
+    color: #757575;
+    text-decoration: none;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
 }
 .header-mail {
-    color: #757575;
+    color: #2196F3;
+    text-decoration: none;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
 }
+
 
 body {
     background-color: #FFFF;
 }
 .hero {
     background-color: #2F303A;
-    color: #FFFF;
+    
+    font-weight: 900;
+    font-size: 44px;
+    line-height: 1.36;
+    text-align: center;
+    letter-spacing: 0.06em;
+    text-transform: uppercase;
+    color: #FFFFFF;
 
 }
 .hero-btn {
     background-color: #2196F3;
-    color: #FFFF;
+    font-family: inherit;
+    font-weight: 700;
     font-size: 16px;
-    line-height: 30px;
-
+    line-height: 1.87;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    letter-spacing: 0.06em;
+    color: #FFFFFF;
 }
 
-.about {
-    color: #757575;
+.about1-link {
+    font-weight: 500;
+        font-size: 16px;
+        line-height: 19px;
+        letter-spacing: 0.03em;
+        color: #212121;
 }
 .about-us {
     background-color: #F5F4FA;
@@ -63,11 +114,13 @@ body {
 
 .contacts {
     background-color: #2F303A;
+    text-decoration: none;
 
 
 }
 .adress-list {
     color: #FFFF;
+    text-decoration: none;
 }
 
 /* Цвет основного текста color: #212121; */
