--- a/css/styles.css
+++ b/css/styles.css
@@ -28,7 +28,7 @@ list-style: none;
     color: var(---main-btn-color);
 }
 .main-header-link {
-    font-family: "Relaway" sans-serif;
+    font-family: "Relaway", sans-serif;
     font-style: normal;
     font-weight: 700;
     font-size: 26px;
@@ -82,7 +82,6 @@ list-style: none;
 }
 
 .current1 {
-    font-family: Roboto sans-serif;
     color: var(---second-btn-color);
     text-decoration: none;
     font-weight: 500;
