--- a/css/styles.css
+++ b/css/styles.css
@@ -35,6 +35,9 @@ list-style: none;
     line-height: 1.19;
     letter-spacing: 0.03em;
     text-decoration: none;
+    margin-left: 145px;
+    margin-top: 31px;
+    border: 5px solid tomato;
 }
 
 .header-item {
